#34 title case in ticker

--- a/src/home/services.ejs
+++ b/src/home/services.ejs
@@ -37,9 +37,9 @@ hideInNavigation: false
     <div class="column text-heading with-borders">
       <h3>And much more!</h3>
     </div>
-    <% const tickerContent = `Virtual cards – Free courses – Grants – Collective admins – Processing payments 2x a week – Community forums –
+    <% const tickerContent = `Virtual Cards – Free Courses – Grants – Collective Admins – Processing Payments 2x a Week – Community Forums –
         Tech
-        owned by us – Transparency – Exit to community – Solidarity economies – Radical admin – `;
+        Owned by Us – Transparency – Exit to Community – Solidarity Economies – Radical Admin – `;
     %>
     <div class="column text-copy with-borders ticker-wrapper">
       <p class="text-copy ticker" aria-label="<%= tickerContent %>">
