--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -16,7 +16,16 @@ _%>
       <h1 class="heading">
         OC Foundation is proud to be the financial and legal home of
         <span class="collective-name"><%= firstCollective.name %> </span> 
-        <img class="collective-hero-image mobile-image hidden show-mobile" src="<%- firstCollective.heroImage %>" alt="<%= firstCollective.heroImageAlt %>" />
+        <% featuredCollectivesFiltered.forEach((collective, i)=> { %>
+          <%- image({ 
+            class: "collective-hero-image mobile-image hidden show-mobile" , 
+            'data-index' : i, 
+            style: i===0 ? '' : 'display: none !important' , // start hidden, unhide with js 
+            src: collective.heroImage, 
+            alt: collective.heroImageAlt || '' ,
+            sizes: '100vw' 
+          }, [428]) %>
+        <% }); %>
         and <%= hostedCollectives.length - 1 %>
         more groups
       </h1>
@@ -34,11 +43,15 @@ _%>
     </div>
 
     <div class="column right hide-mobile">
-      <img
-        class="collective-hero-image"
-        src="<%- firstCollective.heroImage %>"
-        alt="<%= firstCollective.heroImageAlt %>"
-      />
+      <% featuredCollectivesFiltered.forEach((collective, i) => { %>
+        <%- image({
+          class: "collective-hero-image" , 
+          'data-index': i,
+          style: i === 0 ? '' : 'display: none !important', // start hidden, unhide with js
+          src: collective.heroImage, 
+          alt: collective.heroImageAlt || '',
+          sizes: '520px' }, [520]) %>
+      <% }); %>
     </div>
   </div>
 </div>
@@ -56,11 +69,6 @@ _%>
 <!-- Scripts, preloaders -->
 <script src="/assets/scripts/rotateFeaturedCollectives.js"
   data-featured-collectives="<%= JSON.stringify(featuredCollectivesFiltered) %>"></script>
-
-<% featuredCollectivesFiltered.forEach(collective=> { %>
-  <link rel="preload" as="image" href="<%- collective.heroImage %>" />
-  <% }) %>
-
 
 <div class="row the-process-row">
   <div class="content-container">
