Make EJS async, compress team images
Reconfigure EJS to allow await

This means *all includes* now need to await since they could contain async content

--- a/src/_includes/sectionalLayout.ejs
+++ b/src/_includes/sectionalLayout.ejs
@@ -1,4 +1,4 @@
-<%- include('/nav', { collectionName, extraNavLinks }) %>
+<%- await include('/nav', { collectionName, extraNavLinks }) %>
 
 <main>
   <% collections[collectionName].forEach((section)=> { %>
