--- a/src/home/events.ejs
+++ b/src/home/events.ejs
@@ -62,7 +62,7 @@ _%>
       <h3>Resources for Events</h3>
     </div>
     <div class="column with-borders text-copy">
-      <%- markdown(include('../editable-blocks/resources-for-events.md')) %>
+      <%- markdown(await include('../editable-blocks/resources-for-events.md')) %>
     </div>
   </div>
 </div>
