--- a/src/home/footer.ejs
+++ b/src/home/footer.ejs
@@ -14,7 +14,7 @@ hideInNavigation: true
     EIN 81-4004928
     DLN 17053184327027
   </address>
-  <%- include('/social-links.ejs') %>
+  <%- await include('/social-links.ejs') %>
 
   <div class="powered-by">
     <span>Powered by:</span>
