--- a/src/home/pricing.ejs
+++ b/src/home/pricing.ejs
@@ -24,7 +24,7 @@ hideInNavigation: false
     <h3>Fees</h3>
     </div>
     <div class="column with-borders text-copy">
-      <%- markdown(include('../editable-blocks/fees.md')) %>
+      <%- markdown(await include('../editable-blocks/fees.md')) %>
     </div>
   </div>
 </div>
