--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,5 +3,4 @@ layout: default
 permalink: /
 ---
 
-<%- include('/sectionalLayout', { collectionName: 'home', extraNavLinks: [ ] })
-%>
+<%- await include('/sectionalLayout', { collectionName: 'home', extraNavLinks: [ ] }) %>
