--- a/src/home/get-in-touch.ejs
+++ b/src/home/get-in-touch.ejs
@@ -25,7 +25,7 @@ hideInNavigation: true
 
     <div>
       <h3>Connect with us on:</h3>
-      <%- include('/social-links.ejs') %>
+      <%- await include('/social-links.ejs') %>
       <p>
         Do not hesitate to reach out!
       </p>
