--- a/src/styles/sections/hosted-collectives.less
+++ b/src/styles/sections/hosted-collectives.less
@@ -124,7 +124,7 @@ section#hosted-collectives {
   .hide-after(9);
 
   @media screen and (max-width: @viewport-width-tablet-landscape) {
-    // Hide events after first 6
+    // Hide after first 6
     .hide-after(6);
   }
 
@@ -137,12 +137,11 @@ section#hosted-collectives {
     .hide-after(6);
   }
 
-  .show-all .collective-list li {
-    display: inherit !important;
-  }
-
   .show-all-button {
-    .textButton();
+    display: block;
+    text-align: center;
+    color: @color-dark-green;
+    font-weight: @font-weight-light;
     width: 100%;
   }
 }
