#26 make "Show all" in events a link not a button

--- a/src/home/hosted-collectives.ejs
+++ b/src/home/hosted-collectives.ejs
@@ -49,7 +49,8 @@ hideInNavigation: false
       href="https://opencollective.com/foundation#category-CONTRIBUTIONS" 
       target="_blank"
       class="show-all-button">
-      View all</a>
+      View all
+    </a>
   </div>
 
 </div>
