--- a/src/home/events.ejs
+++ b/src/home/events.ejs
@@ -50,8 +50,13 @@ _%>
         <% }); %>
       </ol>
 
-      <button type="button" class="show-all-button" onClick="this.parentElement.classList.toggle('show-all')">View all</button>
-    </div>
+    <a 
+      href="https://opencollective.com/foundation/events" 
+      target="_blank"
+      class="show-all-button">
+      View all
+    </a>
+  </div>
 
   </div>
 </div>
