--- a/src/styles/sections/events.less
+++ b/src/styles/sections/events.less
@@ -130,12 +130,11 @@ section#events {
     .hide-after(6);
   }
 
-  .show-all .event-list li {
-    display: inherit !important;
-  }
-
   .show-all-button {
-    .textButton();
+    display: block;
+    text-align: center;
+    color: @color-dark-green;
+    font-weight: @font-weight-light;
     width: 100%;
   }
 
