#26 limit event names to 2 lines

--- a/src/styles/sections/events.less
+++ b/src/styles/sections/events.less
@@ -90,6 +90,7 @@ section#events {
   .event-name {
     .paragraph-mid();
     font-weight: @font-weight-bold;
+    .limit-lines(2);
   }
 
   .event-name::before {
