Insert via js, hide content via css

--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -44,5 +44,6 @@
   <script src="/assets/scripts/renderFormattedDateTimes.js"></script>
   <script src="/assets/scripts/renderFlags.js"></script>
   <script src="/assets/scripts/createServicesTableMobileDom.js"></script>
+  <script src="/assets/scripts/insertShowMoreButtonIntoServicesTable.js"></script>
   <script src="/assets/scripts/addClassesToSymbolTable.js"></script>
 </html>
