#28 do not contrain pricing graphic in content container

--- a/src/home/pricing.ejs
+++ b/src/home/pricing.ejs
@@ -10,7 +10,7 @@ hideInNavigation: false
 
 
 <div class="pricing-graphic-row">
-  <div class="pricing-graphic content-container">
+  <div class="pricing-graphic">
     <div class="raised">$1000 raised</div>
     <div class="net">$920 for the Collective</div>
     <div class="fee">$80 OCF services</div>
