--- a/src/home/docs.ejs
+++ b/src/home/docs.ejs
@@ -10,6 +10,7 @@ position: 6
 <div class="docs-container">
 
   <iframe
+    title="Open Collective Foundation Docs"
     class="docs-frame"
     src="https://docs.opencollective.foundation/"
     style="width: 100%; height: 100vh; border: none"
