--- a/src/styles/partials/services-table.less
+++ b/src/styles/partials/services-table.less
@@ -91,8 +91,8 @@
     transform: rotate(180deg);
   }
 
-  // Hide rows after button
-  &:not(.show-all) tr.show-more-row ~ tr:not(:last-child) {
+  // Hide rows after 6 rows
+  &:not(.show-all) tr:nth-child(6) ~ tr:not(:last-child):not(.show-more-row) {
     display: none;
   }
 
