Remove content container from table

--- a/src/styles/partials/services-table.less
+++ b/src/styles/partials/services-table.less
@@ -11,7 +11,7 @@
     display: none;
   }
 
-  .content-container();
+  // .content-container();
   .paragraph-mid();
   font-weight: @font-weight-regular;
 
