--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -9,6 +9,7 @@
     <% } else { %>
     <title><%= locals.title %></title>
     <% } %>
+    <%- await include('/seo-meta') %>
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css" />
     <link rel="stylesheet" href="/styles.css" />
     <!-- <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script> -->
