Submit form with js

--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -46,4 +46,5 @@
   <script src="/assets/scripts/createServicesTableMobileDom.js"></script>
   <script src="/assets/scripts/insertShowMoreButtonIntoServicesTable.js"></script>
   <script src="/assets/scripts/addClassesToSymbolTable.js"></script>
+  <script src="/assets/scripts/newsletterForm.js"></script>
 </html>
