--- a/src/home/get-in-touch.ejs
+++ b/src/home/get-in-touch.ejs
@@ -16,6 +16,9 @@ hideInNavigation: true
 
         <button type="submit">Sign up</button>
       </form>
+      <div class="form-submitted-message">
+        Thank you!
+      </div>
     </div>
 
 
