Create "values" section

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -35,5 +35,6 @@
 @import './sections/get-in-touch.less';
 @import './sections/giant-apply-link.less';
 @import './sections/footer.less';
+@import './sections/values.less';
 
 @import './nav.less';
