Provide a way to link into docs frame

--- a/src/home/docs.ejs
+++ b/src/home/docs.ejs
@@ -2,7 +2,6 @@
 title: Docs
 position: 6
 ---
-
   <div class="heading-container">
     <h2>Resources and documentation</h2>
   </div>
@@ -10,6 +9,8 @@ position: 6
 <div class="docs-container">
 
   <iframe
+    id="docs-frame"
+    name="docs"
     title="Open Collective Foundation Docs"
     class="docs-frame"
     src="https://docs.opencollective.foundation/"
@@ -17,3 +18,5 @@ position: 6
     loading="lazy"
   ></iframe>
 </div>
+
+<script src="/assets/scripts/goToDocsUrl.js"></script>
