Change discover url

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,7 +5,7 @@ permalink: /
 
 <%- await include('/sectionalLayout', { collectionName: 'home', extraNavLinks: [ 
   {
-    href: "http://discover.opencollective.com",
+    href: "https://discover.opencollective.com/foundation",
     text: "Discover",
     isExternal: true,
     isCta: false
