Replace Discover nav link with row

--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -74,6 +74,20 @@ _%>
 <script src="/assets/scripts/rotateFeaturedCollectives.js"
   data-featured-collectives="<%= JSON.stringify(featuredCollectivesFiltered) %>"></script>
 
+<div class="discover-row">
+  <div class="content-container">
+    <p class="discover-heading">
+      <a href="https://docs.opencollective.foundation/" target="_blank">
+        Discover more Collectives hosted by us!
+      </a>
+    </p>
+    <p>
+      Discover <%= hostedCollectives.length %> Collectives making an impact in mutual aid, civil tech, arts & culture, climate and more.
+    </p>
+  </div>
+</div>
+
+
 <div class="row the-process-row">
   <div class="content-container">
     <div class="column with-borders the-process-heading">
