Move blog to after events and reveal in nav

--- a/src/home/blog.ejs
+++ b/src/home/blog.ejs
@@ -1,7 +1,7 @@
 ---
-title: blog
-position: 8
-hideInNavigation: true
+title: Blog
+position: 5
+hideInNavigation: false
 ---
 
 <div class="content-container">
