Add link to network graphic

--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -100,6 +100,7 @@ _%>
 <div class="row network-row">
   <div class="content-container">
     <div class="column network-graphic">
+      <a href="http://opencollective.com/e2c" target="_blank">
       <%- await image({
         src: '/assets/images/network.png',
         alt: 'Network illustration',
@@ -108,6 +109,7 @@ _%>
         66%
         `
       },  [773, 423, 428]) %>
+      </a>
     </div>
     <div class="column network-copy">
       <p class="">
