Add link to process graphic

--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -95,14 +95,16 @@ _%>
     </div>
 
     <div class="column the-process-graphic">
-      <%- await image({
-        src: '/assets/images/theprocess.png',
-        alt: 'Infographic showing the steps: Apply, then meet us, then set up your page, then raise funds!',
-        sizes: `
-        (max-width: 428px) 100vw,
-        66%
-        `
-      }, [773, 423, 428]) %>
+      <a href="https://opencollective.com/foundation/apply" target="_blank">
+        <%- await image({
+          src: '/assets/images/theprocess.png',
+          alt: 'Infographic showing the steps: Apply, then meet us, then set up your page, then raise funds!',
+          sizes: `
+          (max-width: 428px) 100vw,
+          66%
+          `
+        }, [773, 423, 428]) %>
+      </a>
     </div>
   </div>
 </div>
