Change sizing, fonts on fees diagram

--- a/src/styles/sections/pricing.less
+++ b/src/styles/sections/pricing.less
@@ -26,7 +26,7 @@ section#pricing {
     grid-column: span 2;
     // span whole column
     grid-row: 1 / -1;
-    height: 352px;
+    height: 458px;
     background-color: #fddd84;
     .heading-h2();
     font-weight: @font-weight-bold;
@@ -34,7 +34,7 @@ section#pricing {
 
   .net {
     grid-column: span 2;
-    height: 216px;
+    height: 365px;
     background-color: #bae1aa;
     .heading-h2();
     font-weight: @font-weight-bold;
@@ -42,10 +42,10 @@ section#pricing {
 
   .fee {
     grid-column: span 2;
-    height: 72px;
+    height: 55px;
     color: white;
     background-color: #044f54;
-    .subheading();
+    .paragraph-large();
   }
 
   .fee-staff {
@@ -54,9 +54,9 @@ section#pricing {
 
   .fee-staff,
   .fee-tech {
-    height: 64px;
+    height: 38px;
     background-color: #c0feff;
-    .subheading();
+    .paragraph-mid();
   }
 
   .fees-row a {
