--- a/src/_includes/sectionalLayout.ejs
+++ b/src/_includes/sectionalLayout.ejs
@@ -1,4 +1,4 @@
-<%- await include('/nav', { collectionName, extraNavLinks }) %>
+<%- await include('/nav', { collectionName, extraNavLinks, prefix: '' }) %>
 
 <main>
   <% collections[collectionName].forEach((section)=> { %>
