--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,3 +5,5 @@ permalink: /
 
 <%- await include('/sectionalLayout', { collectionName: 'home', extraNavLinks: [ 
 ] }) %>
+
+<%- await include('/footer') %>
