--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -20,6 +20,7 @@
 @import './partials/carousel.less';
 @import './partials/platformFeaturesCarousel.less';
 @import './partials/viewport-visibility.less';
+@import './partials/footer.less';
 
 @import './base.less';
 
@@ -34,7 +35,6 @@
 @import './sections/docs.less';
 @import './sections/get-in-touch.less';
 @import './sections/giant-apply-link.less';
-@import './sections/footer.less';
 @import './sections/values.less';
 
 @import './nav.less';
