Some styles on calculator

--- a/src/styles/sections/giant-apply-link.less
+++ b/src/styles/sections/giant-apply-link.less
@@ -12,7 +12,7 @@ section#giant-apply-link {
     display: grid;
     align-items: center;
     justify-content: center;
-    border: 1px solid @color-dark-400;
+    border: @default-rule-lighter;
     border-radius: @border-radius;
   }
 }
