--- a/src/styles/variables/color.less
+++ b/src/styles/variables/color.less
@@ -2,6 +2,7 @@
 @background-color-lighter: #ffffff;
 @background-color-base: rgb(247, 254, 254);
 @color-dark-400: #c3c6cb;
+@color-dark-700: #4d4f51;
 
 @color-dark-green: #044f54;
 @color-red: #ff3d22;
