--- a/src/compensation.ejs
+++ b/src/compensation.ejs
@@ -5,7 +5,7 @@ title: Compensation Calculator
 
 <%- await include('/nav', { collectionName: 'home', extraNavLinks: [], prefix: '/' }) %>
 
-<main id="compensation">
+<main id="compensation" class="content-container">
   <iframe id="compensation-frame" src="/compensation-frame" style="width: 1px; min-width: 100%; border: none;">
   </iframe>
 </main>
