--- a/src/styles/partials/typography.less
+++ b/src/styles/partials/typography.less
@@ -69,6 +69,14 @@
   }
 }
 
+.heading-h3() {
+  #type-rulesets.heading-h3();
+
+  @media screen and (max-width: @viewport-width-mobile) {
+    #type-rulesets.paragraph-large();
+  }
+}
+
 .subheading() {
   #type-rulesets.subheading();
 
