Absolute import of js
did not work in prod otherwise

--- a/src/compensation-frame/index.ejs
+++ b/src/compensation-frame/index.ejs
@@ -196,7 +196,7 @@
     </div>
 
     <script type="module">
-      import CompensationCalculator from './CompensationCalculator.js';
+      import CompensationCalculator from '/compensation-frame/CompensationCalculator.js';
       const { createApp } = Vue; // eslint-disable-line
 
       const app = createApp(CompensationCalculator);
