add back hourly

--- a/src/compensation-frame/index.ejs
+++ b/src/compensation-frame/index.ejs
@@ -190,7 +190,8 @@
         </div>
 
         <div class="grand-total">
-          <span class="key"> Salary =  </span>${{ round(proRataPay, 0) }}
+          <span class="key"> Salary =  </span>${{ round(proRataPay, 0) }}<br/>
+          <span>(hourly: ${{ hourlyPay }})</span>
         </div>
       </div>
     </div>
