giant apply link hover state

--- a/src/styles/sections/giant-apply-link.less
+++ b/src/styles/sections/giant-apply-link.less
@@ -14,5 +14,9 @@ section#giant-apply-link {
     justify-content: center;
     border: @default-rule-lighter;
     border-radius: @border-radius;
+
+    &:hover {
+      background-color: @color-sand-light;
+    }
   }
 }
